--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@
   width: 100%;
   z-index: -1;
   position: absolute;
-  height: 100%;
+  height: 1200px;
   
 }
 
@@ -115,7 +115,7 @@
   list-style: none;
   background-position: left;
   background-image: url('../src/assets/img/instagram.png');
-  background-size: 1.5vh;
+  background-size: 1.9vh;
   background-repeat: no-repeat;
   height: 20px;
   margin-left: 5px;
