--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,36 @@
 
 .App {
-  font-size: 12px ;
+  font-size: 13px ;
   text-align: center;
   text-align: center;
   z-index: 1;
+  font-family:'Times New Roman', Times, serif;
+  font-weight: 800;
 
 
 }
 
+.headercul {
+  max-width: 320px;
+  display: block;
+  margin: auto;
 
+}
+
+.footercul {
+
+  max-width: 812px;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 30px;
+
+}
 
 .welcome {
   border: 8px solid black;
   border-image: url("https://i.ibb.co/n6LTKgW/tumblr-inline-o98msk-Fn-Tn1u2r0ws-540.png") repeat;
   border-image-slice: 37%;
-  padding-bottom: 50px;
+  padding: 3%;
   float: left;
   float: right;
   background-color: white;
@@ -28,17 +44,17 @@
   border: 8px solid black;
   border-image: url("https://i.ibb.co/n6LTKgW/tumblr-inline-o98msk-Fn-Tn1u2r0ws-540.png") repeat;
   border-image-slice: 37%;
-  padding-bottom: 50px;
+  padding: 3%;
   background-color: white;
   margin-top: 30px;
-  max-height: 81%;
+  min-height: 90%;
   }
 
 .righcont {
   border: 8px solid black;
   border-image: url("https://i.ibb.co/n6LTKgW/tumblr-inline-o98msk-Fn-Tn1u2r0ws-540.png") repeat;
   border-image-slice: 37%;
-  padding-bottom: 50px;
+  padding: 3%;
   background-color: white;
   margin-top: 30px;
   min-height: 81%;
@@ -46,13 +62,19 @@
 }
 
 
+
       /* images */
+.email {
+  width: 60%;
+  height: 60%;
+}
 .cirera {
-  width: 80%;
+  width: 100%;
+  margin-bottom: 20px;
 }
 
 .sailor {
-  width: 90%;
+  width: 100%;
 }
 
 .cul {
@@ -61,9 +83,10 @@
 
 .back {
   width: 100%;
+  min-width: 320px;
+  height: 812px;
   z-index: -1;
   position: absolute;
-  height: 1200px;
   
 }
 
@@ -81,6 +104,7 @@
   background-repeat: no-repeat;
   height: 20px;
 }
+
 .icecream{
   list-style: none;
   background-position: left;
@@ -114,24 +138,26 @@
 .linksig {
   list-style: none;
   background-position: left;
-  background-image: url('https://lh3.googleusercontent.com/proxy/0bPgcZ3hqwAxohOIqsucsh6aLW6YdBfceXPsCbOn1UKGVwnyanqA3YNEb5IpQi3Brb4HjBzl6skpbfsWpnGc2v-vAP66UmdYTeJp2kUfz4TBiczbHXl5oLQvsmNt9ueBcrw6ksNlRCkfIJ1P7OFiHhNnQBaeO6k');
   background-size: 2.5vh;
   background-repeat: no-repeat;
   height: 20px;
-  margin-left: 40px;
   font-size: 1.5vh;
+  margin-bottom: 10px;
+  margin-left: 7px;
 
 }
 
 .linkstw {
   list-style: none;
   background-position: left;
-  background-image: url('https://logodownload.org/wp-content/uploads/2014/09/twitter-logo-4.png');
   background-size: 2.5vh;
   background-repeat: no-repeat;
   height: 20px;
-  margin-left: 40px;
   font-size: 1.8vh;
+  margin-bottom: 10px;
+  margin-left: 7px;
+
+
 }
 
 
