add change images and sizes

--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,8 @@
 .back {
   width: 100%;
   min-width: 320px;
-  height: 812px;
+  min-height: 900px;
+  max-height: auto;
   z-index: -1;
   position: absolute;
   
