--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,24 @@
+.click {
+  display: none;
+  width: 20px;
+  height: 20px;
+}
 
+
+@media only screen and (max-width: 750px) {
+  .click {
+    display: block;
+  }
+  .navbar--links {
+    display: none;
+  }
+}
+
+#hidden {
+  display: flex;
+  flex-direction: column;
+  margin-left: -20px;
+}
 .App {
   font-size: 13px ;
   text-align: center;
@@ -8,8 +28,8 @@
   font-weight: 800;
   min-width: 320px;
 
-
 }
+
 
 .headercul {
   max-width: 320px;
